--- a/website/pages/docs/validators/assert.mdx
+++ b/website/pages/docs/validators/assert.mdx
@@ -20,14 +20,10 @@ export function assert<T>(input: unknown): T;
 ```
   </Tabs.Tab>
   <Tabs.Tab>
-```typescript
-export class TypeGuardError extends Error {
-  public readonly method: string;
-  public readonly path: string | undefined;
-  public readonly expected: string;
-  public readonly value: any;
-}
-```
+    <RemoteSource 
+      url="https://raw.githubusercontent.com/samchon/typia/refs/heads/master/src/TypeGuardError.ts"
+      filename="@samchon/typia"
+      showLineNumbers />
   </Tabs.Tab>
 </Tabs>
 
@@ -85,14 +81,10 @@ export function assertEquals<T>(input: unknown): T;
 ```
   </Tabs.Tab>
   <Tabs.Tab>
-```typescript
-export class TypeGuardError extends Error {
-  public readonly method: string;
-  public readonly path: string | undefined;
-  public readonly expected: string;
-  public readonly value: any;
-}
-```
+    <RemoteSource 
+      url="https://raw.githubusercontent.com/samchon/typia/refs/heads/master/src/TypeGuardError.ts"
+      filename="@samchon/typia"
+      showLineNumbers />
   </Tabs.Tab>
 </Tabs>
 
@@ -138,14 +130,10 @@ export function assertGuardEquals<T>(input: unknown): asserts input is T;
 ```
   </Tabs.Tab>
   <Tabs.Tab>
-```typescript
-export class TypeGuardError extends Error {
-  public readonly method: string;
-  public readonly path: string | undefined;
-  public readonly expected: string;
-  public readonly value: any;
-}
-```
+    <RemoteSource 
+      url="https://raw.githubusercontent.com/samchon/typia/refs/heads/master/src/TypeGuardError.ts"
+      filename="@samchon/typia"
+      showLineNumbers />
   </Tabs.Tab>
 </Tabs>
 
@@ -181,14 +169,10 @@ export function createAssertGuardEquals<T>(): AssertionGuard<T>;
 ```
   </Tabs.Tab>
   <Tabs.Tab>
-```typescript
-export class TypeGuardError extends Error {
-  public readonly method: string;
-  public readonly path: string | undefined;
-  public readonly expected: string;
-  public readonly value: any;
-}
-```
+    <RemoteSource 
+      url="https://raw.githubusercontent.com/samchon/typia/refs/heads/master/src/TypeGuardError.ts"
+      filename="@samchon/typia"
+      showLineNumbers />
   </Tabs.Tab>
   <Tabs.Tab>
 ```typescript
