--- a/website/pages/docs/json/parse.mdx
+++ b/website/pages/docs/json/parse.mdx
@@ -1,9 +1,12 @@
 ---
 title: Guide Documents > JSON < parse() functions
 ---
-import { Tabs } from 'nextra/components'
+import { Tabs } from "nextra/components";
+
+import RemoteSource from "../../../src/components/RemoteSource";
 
 ## `parse()` functions
+
 <Tabs items={[
   <code>typia</code>, 
   <code>TypeGuardError.ts</code>, 
@@ -20,174 +23,22 @@ export namespace json {
 ```
   </Tabs.Tab>
   <Tabs.Tab>
-```typescript copy
-export class TypeGuardError extends Error {
-  public readonly method: string;
-  public readonly path: string | undefined;
-  public readonly expected: string;
-  public readonly value: any;
-}
-```
+    <RemoteSource 
+      url="https://raw.githubusercontent.com/samchon/typia/refs/heads/master/src/TypeGuardError.ts"
+      filename="typia/TypeGuardError.ts"
+      showLineNumbers />
   </Tabs.Tab>
   <Tabs.Tab>
-```typescript copy
-export type IValidation<T> = IValidation.ISuccess<T> | IValidation.IFailure;
-export namespace IValidation {
-  export interface ISuccess<T> {
-    success: true;
-    data: T;
-  }
-  export interface IFailure {
-    success: false;
-    errors: IError[];
-    data: unknown;
-  }
-  export interface IError {
-    path: string;
-    expected: string;
-    value: any;
-  }
-}
-```
+    <RemoteSource 
+      url="https://raw.githubusercontent.com/samchon/openapi/refs/heads/master/src/structures/IValidation.ts"
+      filename="@samchon/openapi"
+      showLineNumbers />
   </Tabs.Tab>
   <Tabs.Tab>
-```typescript showLineNumbers copy
-/**
- * Primitive type of JSON.
- *
- * `Primitive<T>` is a TMP (Type Meta Programming) type which converts
- * its argument as a primitive type within framework JSON.
- *
- * If the target argument is a built-in class which returns its origin primitive type
- * through the `valueOf()` method like the `String` or `Number`, its return type would
- * be the `string` or `number`. Otherwise, the built-in class does not have the
- * `valueOf()` method, the return type would be an empty object (`{}`).
- *
- * Otherwise, the target argument is a type of custom class, all of its custom method
- * would be erased and its prototype would be changed to the primitive `object`.
- * Therefore, return type of the TMP type finally be the primitive object.
- *
- * In addition, if the target argument is a type of custom class and it has a special
- * method `toJSON()`, return type of this `Primitive` would be not `Primitive<Instance>`
- * but `Primitive<ReturnType<Instance.toJSON>>`.
- *
- * Before                  | After
- * ------------------------|----------------------------------------
- * `Boolean`               | `boolean`
- * `Number`                | `number`
- * `String`                | `string`
- * `Class`                 | `object`
- * `Class` with `toJSON()` | `Primitive<ReturnType<Class.toJSON>>`
- * Native Class            | never
- * Others                  | No change
- *
- * @template T Target argument type.
- * @author Jeongho Nam - https://github.com/samchon
- * @author Kyungsu Kang - https://github.com/kakasoo
- * @author Michael - https://github.com/8471919
- */
-export type Primitive<T> = Equal<T, PrimitiveMain<T>> extends true
-  ? T
-  : PrimitiveMain<T>;
-
-type Equal<X, Y> = X extends Y ? (Y extends X ? true : false) : false;
-
-type PrimitiveMain<Instance> = Instance extends [never]
-  ? never // (special trick for jsonable | null) type
-  : ValueOf<Instance> extends bigint
-  ? never
-  : ValueOf<Instance> extends boolean | number | string
-  ? ValueOf<Instance>
-  : Instance extends Function
-  ? never
-  : ValueOf<Instance> extends object
-  ? Instance extends object
-    ? Instance extends NativeClass
-      ? never
-      : Instance extends IJsonable<infer Raw>
-      ? ValueOf<Raw> extends object
-        ? Raw extends object
-          ? PrimitiveObject<Raw> // object would be primitified
-          : never // cannot be
-        : ValueOf<Raw> // atomic value
-      : PrimitiveObject<Instance> // object would be primitified
-    : never // cannot be
-  : ValueOf<Instance>;
-
-type PrimitiveObject<Instance extends object> = Instance extends Array<infer T>
-  ? IsTuple<Instance> extends true
-    ? PrimitiveTuple<Instance>
-    : PrimitiveMain<T>[]
-  : {
-      [P in keyof Instance]: PrimitiveMain<Instance[P]>;
-    };
-
-type PrimitiveTuple<T extends readonly any[]> = T extends []
-  ? []
-  : T extends [infer F]
-  ? [PrimitiveMain<F>]
-  : T extends [infer F, ...infer Rest extends readonly any[]]
-  ? [PrimitiveMain<F>, ...PrimitiveTuple<Rest>]
-  : T extends [(infer F)?]
-  ? [PrimitiveMain<F>?]
-  : T extends [(infer F)?, ...infer Rest extends readonly any[]]
-  ? [PrimitiveMain<F>?, ...PrimitiveTuple<Rest>]
-  : [];
-
-type ValueOf<Instance> = IsValueOf<Instance, Boolean> extends true
-  ? boolean
-  : IsValueOf<Instance, Number> extends true
-  ? number
-  : IsValueOf<Instance, String> extends true
-  ? string
-  : Instance;
-
-type NativeClass =
-  | Set<any>
-  | Map<any, any>
-  | WeakSet<any>
-  | WeakMap<any, any>
-  | Uint8Array
-  | Uint8ClampedArray
-  | Uint16Array
-  | Uint32Array
-  | BigUint64Array
-  | Int8Array
-  | Int16Array
-  | Int32Array
-  | BigInt64Array
-  | Float32Array
-  | Float64Array
-  | ArrayBuffer
-  | SharedArrayBuffer
-  | DataView;
-
-type IsTuple<T extends readonly any[] | { length: number }> = [T] extends [
-  never,
-]
-  ? false
-  : T extends readonly any[]
-  ? number extends T["length"]
-    ? false
-    : true
-  : false;
-
-type IsValueOf<Instance, Object extends IValueOf<any>> = Instance extends Object
-  ? Object extends IValueOf<infer U>
-    ? Instance extends U
-      ? false
-      : true // not Primitive, but Object
-    : false // cannot be
-  : false;
-
-interface IValueOf<T> {
-  valueOf(): T;
-}
-
-interface IJsonable<T> {
-  toJSON(): T;
-}
-```
+    <RemoteSource 
+      url="https://raw.githubusercontent.com/samchon/typia/refs/heads/master/src/Primitive.ts"
+      filename="typia/Primitive.ts"
+      showLineNumbers />
   </Tabs.Tab>
 </Tabs>
 
@@ -205,343 +56,21 @@ Look at the below code, then you may understand how the `typia.json.assertParse<
 
 <Tabs items={['TypeScript Source Code', 'Compiled JavaScript File']}>
   <Tabs.Tab>
-```typescript copy filename="examples/src/assertParse.ts" showLineNumbers
-import typia, { tags } from "typia";
-
-const json: string = JSON.stringify(typia.random<IMember>());
-const parsed: IMember = typia.json.assertParse<IMember>(json);
-
-console.log(json === JSON.stringify(parsed)); // true
-
-interface IMember {
-  id: string & tags.Format<"uuid">;
-  email: string & tags.Format<"email">;
-  age: number &
-    tags.Type<"uint32"> &
-    tags.ExclusiveMinimum<19> &
-    tags.Maximum<100>;
-}
-```
+    <RemoteSource 
+      url="https://raw.githubusercontent.com/samchon/typia/refs/heads/master/examples/src/json/assertParse.ts"
+      filename="examples/src/json/assertParse.ts"
+      showLineNumbers />
   </Tabs.Tab>
   <Tabs.Tab>
-```javascript filename="examples/bin/assertParse.js" showLineNumbers
-import * as __typia_transform__randomFormatUuid from "typia/lib/internal/_randomFormatUuid.js";
-import * as __typia_transform__randomFormatEmail from "typia/lib/internal/_randomFormatEmail.js";
-import * as __typia_transform__randomInteger from "typia/lib/internal/_randomInteger.js";
-import * as __typia_transform__isFormatUuid from "typia/lib/internal/_isFormatUuid.js";
-import * as __typia_transform__isFormatEmail from "typia/lib/internal/_isFormatEmail.js";
-import * as __typia_transform__isTypeUint32 from "typia/lib/internal/_isTypeUint32.js";
-import * as __typia_transform__assertGuard from "typia/lib/internal/_assertGuard.js";
-import typia from "typia";
-const json = JSON.stringify(
-  (() => {
-    const _ro0 = (_recursive = false, _depth = 0) => ({
-      id: (
-        _generator?.uuid ??
-        __typia_transform__randomFormatUuid._randomFormatUuid
-      )(),
-      email: (
-        _generator?.email ??
-        __typia_transform__randomFormatEmail._randomFormatEmail
-      )(),
-      age: (
-        _generator?.integer ?? __typia_transform__randomInteger._randomInteger
-      )({
-        type: "integer",
-        exclusiveMinimum: true,
-        minimum: 19,
-        maximum: 100,
-      }),
-    });
-    let _generator;
-    return (generator) => {
-      _generator = generator;
-      return _ro0();
-    };
-  })()(),
-);
-const parsed = (() => {
-  const _io0 = (input) =>
-    "string" === typeof input.id &&
-    __typia_transform__isFormatUuid._isFormatUuid(input.id) &&
-    "string" === typeof input.email &&
-    __typia_transform__isFormatEmail._isFormatEmail(input.email) &&
-    "number" === typeof input.age &&
-    __typia_transform__isTypeUint32._isTypeUint32(input.age) &&
-    19 < input.age &&
-    input.age <= 100;
-  const _ao0 = (input, _path, _exceptionable = true) =>
-    (("string" === typeof input.id &&
-      (__typia_transform__isFormatUuid._isFormatUuid(input.id) ||
-        __typia_transform__assertGuard._assertGuard(
-          _exceptionable,
-          {
-            method: "typia.json.assertParse",
-            path: _path + ".id",
-            expected: 'string & Format<"uuid">',
-            value: input.id,
-          },
-          _errorFactory,
-        ))) ||
-      __typia_transform__assertGuard._assertGuard(
-        _exceptionable,
-        {
-          method: "typia.json.assertParse",
-          path: _path + ".id",
-          expected: '(string & Format<"uuid">)',
-          value: input.id,
-        },
-        _errorFactory,
-      )) &&
-    (("string" === typeof input.email &&
-      (__typia_transform__isFormatEmail._isFormatEmail(input.email) ||
-        __typia_transform__assertGuard._assertGuard(
-          _exceptionable,
-          {
-            method: "typia.json.assertParse",
-            path: _path + ".email",
-            expected: 'string & Format<"email">',
-            value: input.email,
-          },
-          _errorFactory,
-        ))) ||
-      __typia_transform__assertGuard._assertGuard(
-        _exceptionable,
-        {
-          method: "typia.json.assertParse",
-          path: _path + ".email",
-          expected: '(string & Format<"email">)',
-          value: input.email,
-        },
-        _errorFactory,
-      )) &&
-    (("number" === typeof input.age &&
-      (__typia_transform__isTypeUint32._isTypeUint32(input.age) ||
-        __typia_transform__assertGuard._assertGuard(
-          _exceptionable,
-          {
-            method: "typia.json.assertParse",
-            path: _path + ".age",
-            expected: 'number & Type<"uint32">',
-            value: input.age,
-          },
-          _errorFactory,
-        )) &&
-      (19 < input.age ||
-        __typia_transform__assertGuard._assertGuard(
-          _exceptionable,
-          {
-            method: "typia.json.assertParse",
-            path: _path + ".age",
-            expected: "number & ExclusiveMinimum<19>",
-            value: input.age,
-          },
-          _errorFactory,
-        )) &&
-      (input.age <= 100 ||
-        __typia_transform__assertGuard._assertGuard(
-          _exceptionable,
-          {
-            method: "typia.json.assertParse",
-            path: _path + ".age",
-            expected: "number & Maximum<100>",
-            value: input.age,
-          },
-          _errorFactory,
-        ))) ||
-      __typia_transform__assertGuard._assertGuard(
-        _exceptionable,
-        {
-          method: "typia.json.assertParse",
-          path: _path + ".age",
-          expected:
-            '(number & Type<"uint32"> & ExclusiveMinimum<19> & Maximum<100>)',
-          value: input.age,
-        },
-        _errorFactory,
-      ));
-  const __is = (input) =>
-    "object" === typeof input && null !== input && _io0(input);
-  let _errorFactory;
-  const __assert = (input, errorFactory) => {
-    if (false === __is(input)) {
-      _errorFactory = errorFactory;
-      ((input, _path, _exceptionable = true) =>
-        ((("object" === typeof input && null !== input) ||
-          __typia_transform__assertGuard._assertGuard(
-            true,
-            {
-              method: "typia.json.assertParse",
-              path: _path + "",
-              expected: "IMember",
-              value: input,
-            },
-            _errorFactory,
-          )) &&
-          _ao0(input, _path + "", true)) ||
-        __typia_transform__assertGuard._assertGuard(
-          true,
-          {
-            method: "typia.json.assertParse",
-            path: _path + "",
-            expected: "IMember",
-            value: input,
-          },
-          _errorFactory,
-        ))(input, "$input", true);
-    }
-    return input;
-  };
-  return (input, errorFactory) => __assert(JSON.parse(input), errorFactory);
-})()(json);
-console.log(json === JSON.stringify(parsed)); // true
-```
-  </Tabs.Tab>
-  <Tabs.Tab>
-```typescript showLineNumbers copy
-/**
- * Primitive type of JSON.
- *
- * `Primitive<T>` is a TMP (Type Meta Programming) type which converts
- * its argument as a primitive type within framework JSON.
- *
- * If the target argument is a built-in class which returns its origin primitive type
- * through the `valueOf()` method like the `String` or `Number`, its return type would
- * be the `string` or `number`. Otherwise, the built-in class does not have the
- * `valueOf()` method, the return type would be an empty object (`{}`).
- *
- * Otherwise, the target argument is a type of custom class, all of its custom method
- * would be erased and its prototype would be changed to the primitive `object`.
- * Therefore, return type of the TMP type finally be the primitive object.
- *
- * In addition, if the target argument is a type of custom class and it has a special
- * method `toJSON()`, return type of this `Primitive` would be not `Primitive<Instance>`
- * but `Primitive<ReturnType<Instance.toJSON>>`.
- *
- * Before                  | After
- * ------------------------|----------------------------------------
- * `Boolean`               | `boolean`
- * `Number`                | `number`
- * `String`                | `string`
- * `Class`                 | `object`
- * `Class` with `toJSON()` | `Primitive<ReturnType<Class.toJSON>>`
- * Native Class            | never
- * Others                  | No change
- *
- * @template T Target argument type.
- * @author Jeongho Nam - https://github.com/samchon
- * @author Kyungsu Kang - https://github.com/kakasoo
- * @author Michael - https://github.com/8471919
- */
-export type Primitive<T> = Equal<T, PrimitiveMain<T>> extends true
-  ? T
-  : PrimitiveMain<T>;
-
-type Equal<X, Y> = X extends Y ? (Y extends X ? true : false) : false;
-
-type PrimitiveMain<Instance> = Instance extends [never]
-  ? never // (special trick for jsonable | null) type
-  : ValueOf<Instance> extends bigint
-  ? never
-  : ValueOf<Instance> extends boolean | number | string
-  ? ValueOf<Instance>
-  : Instance extends Function
-  ? never
-  : ValueOf<Instance> extends object
-  ? Instance extends object
-    ? Instance extends NativeClass
-      ? never
-      : Instance extends IJsonable<infer Raw>
-      ? ValueOf<Raw> extends object
-        ? Raw extends object
-          ? PrimitiveObject<Raw> // object would be primitified
-          : never // cannot be
-        : ValueOf<Raw> // atomic value
-      : PrimitiveObject<Instance> // object would be primitified
-    : never // cannot be
-  : ValueOf<Instance>;
-
-type PrimitiveObject<Instance extends object> = Instance extends Array<infer T>
-  ? IsTuple<Instance> extends true
-    ? PrimitiveTuple<Instance>
-    : PrimitiveMain<T>[]
-  : {
-      [P in keyof Instance]: PrimitiveMain<Instance[P]>;
-    };
-
-type PrimitiveTuple<T extends readonly any[]> = T extends []
-  ? []
-  : T extends [infer F]
-  ? [PrimitiveMain<F>]
-  : T extends [infer F, ...infer Rest extends readonly any[]]
-  ? [PrimitiveMain<F>, ...PrimitiveTuple<Rest>]
-  : T extends [(infer F)?]
-  ? [PrimitiveMain<F>?]
-  : T extends [(infer F)?, ...infer Rest extends readonly any[]]
-  ? [PrimitiveMain<F>?, ...PrimitiveTuple<Rest>]
-  : [];
-
-type ValueOf<Instance> = IsValueOf<Instance, Boolean> extends true
-  ? boolean
-  : IsValueOf<Instance, Number> extends true
-  ? number
-  : IsValueOf<Instance, String> extends true
-  ? string
-  : Instance;
-
-type NativeClass =
-  | Set<any>
-  | Map<any, any>
-  | WeakSet<any>
-  | WeakMap<any, any>
-  | Uint8Array
-  | Uint8ClampedArray
-  | Uint16Array
-  | Uint32Array
-  | BigUint64Array
-  | Int8Array
-  | Int16Array
-  | Int32Array
-  | BigInt64Array
-  | Float32Array
-  | Float64Array
-  | ArrayBuffer
-  | SharedArrayBuffer
-  | DataView;
-
-type IsTuple<T extends readonly any[] | { length: number }> = [T] extends [
-  never,
-]
-  ? false
-  : T extends readonly any[]
-  ? number extends T["length"]
-    ? false
-    : true
-  : false;
-
-type IsValueOf<Instance, Object extends IValueOf<any>> = Instance extends Object
-  ? Object extends IValueOf<infer U>
-    ? Instance extends U
-      ? false
-      : true // not Primitive, but Object
-    : false // cannot be
-  : false;
-
-interface IValueOf<T> {
-  valueOf(): T;
-}
-
-interface IJsonable<T> {
-  toJSON(): T;
-}
-```
+    <RemoteSource 
+      url="https://raw.githubusercontent.com/samchon/typia/refs/heads/master/examples/bin/json/assertParse.js"
+      filename="examples/bin/json/assertParse.js"
+      showLineNumbers />
   </Tabs.Tab>
 </Tabs>
 
-
-
-
 ## Reusable functions
+
 <Tabs items={[
   <code>typia</code>, 
   <code>TypeGuardError.ts</code>, 
@@ -560,35 +89,22 @@ export namespace json {
 ```
   </Tabs.Tab>
   <Tabs.Tab>
-```typescript copy
-export class TypeGuardError extends Error {
-  public readonly method: string;
-  public readonly path: string | undefined;
-  public readonly expected: string;
-  public readonly value: any;
-}
-```
+    <RemoteSource 
+      url="https://raw.githubusercontent.com/samchon/typia/refs/heads/master/src/TypeGuardError.ts"
+      filename="typia/TypeGuardError.ts"
+      showLineNumbers />
   </Tabs.Tab>
   <Tabs.Tab>
-```typescript copy
-export type IValidation<T> = IValidation.ISuccess<T> | IValidation.IFailure;
-export namespace IValidation {
-  export interface ISuccess<T> {
-    success: true;
-    data: T;
-  }
-  export interface IFailure {
-    success: false;
-    errors: IError[];
-    data: unknown;
-  }
-  export interface IError {
-    path: string;
-    expected: string;
-    value: any;
-  }
-}
-```
+    <RemoteSource 
+      url="https://raw.githubusercontent.com/samchon/openapi/refs/heads/master/src/structures/IValidation.ts"
+      filename="@samchon/openapi"
+      showLineNumbers />
+  </Tabs.Tab>
+  <Tabs.Tab>
+    <RemoteSource 
+      url="https://raw.githubusercontent.com/samchon/typia/refs/heads/master/src/Primitive.ts"
+      filename="typia/Primitive.ts"
+      showLineNumbers />
   </Tabs.Tab>
 </Tabs>
 
@@ -600,44 +116,15 @@ Just look at the code below, then you may understand how to use it.
 
 <Tabs items={['TypeScript Source Code', 'Compiled JavaScript File']}>
   <Tabs.Tab>
-```typescript copy filename="examples/src/createIsParse.ts" showLineNumbers
-import typia, { tags } from "typia";
-
-export const parseMember = typia.json.createIsParse<IMember>();
-
-interface IMember {
-  id: string & tags.Format<"uuid">;
-  email: string & tags.Format<"email">;
-  age: number &
-    tags.Type<"uint32"> &
-    tags.ExclusiveMinimum<19> &
-    tags.Maximum<100>;
-}
-```
+    <RemoteSource 
+      url="https://raw.githubusercontent.com/samchon/typia/refs/heads/master/examples/src/json/createIsParse.ts"
+      filename="examples/src/json/createIsParse.ts"
+      showLineNumbers />
   </Tabs.Tab>
   <Tabs.Tab>
-```javascript filename="examples/bin/createIsParse.js" showLineNumbers
-import * as __typia_transform__isFormatUuid from "typia/lib/internal/_isFormatUuid.js";
-import * as __typia_transform__isFormatEmail from "typia/lib/internal/_isFormatEmail.js";
-import * as __typia_transform__isTypeUint32 from "typia/lib/internal/_isTypeUint32.js";
-import typia from "typia";
-export const parseMember = (() => {
-  const _io0 = (input) =>
-    "string" === typeof input.id &&
-    __typia_transform__isFormatUuid._isFormatUuid(input.id) &&
-    "string" === typeof input.email &&
-    __typia_transform__isFormatEmail._isFormatEmail(input.email) &&
-    "number" === typeof input.age &&
-    __typia_transform__isTypeUint32._isTypeUint32(input.age) &&
-    19 < input.age &&
-    input.age <= 100;
-  const __is = (input) =>
-    "object" === typeof input && null !== input && _io0(input);
-  return (input) => {
-    input = JSON.parse(input);
-    return __is(input) ? input : null;
-  };
-})();
-```
+    <RemoteSource 
+      url="https://raw.githubusercontent.com/samchon/typia/refs/heads/master/examples/bin/json/createIsParse.js"
+      filename="examples/bin/json/createIsParse.js"
+      showLineNumbers />
   </Tabs.Tab>
 </Tabs>
