Also misc chapter

--- a/website/pages/docs/protobuf/encode.mdx
+++ b/website/pages/docs/protobuf/encode.mdx
@@ -5,6 +5,8 @@ import { Tabs } from 'nextra/components'
 import Alert from '@mui/material/Alert';
 import AlertTitle from '@mui/material/AlertTitle';
 
+import RemoteSource from "../../../src/components/RemoteSource";
+
 ## `encode()` functions
 
 <Tabs items={[
@@ -72,8 +74,8 @@ By the way, `typia.protobuf.encode<T>()` function does not validate the `input` 
   </Tabs.Tab>
   <Tabs.Tab>
     <RemoteSource 
-      url="https://raw.githubusercontent.com/samchon/typia/refs/heads/master/examples/src/protobuf/encode.js"
-      filename="examples/src/protobuf/encode.js"
+      url="https://raw.githubusercontent.com/samchon/typia/refs/heads/master/examples/bin/protobuf/encode.js"
+      filename="examples/bin/protobuf/encode.js"
       showLineNumbers />
   </Tabs.Tab>
 </Tabs>
