--- a/website/pages/docs/protobuf/message.mdx
+++ b/website/pages/docs/protobuf/message.mdx
@@ -34,7 +34,7 @@ With this `message()` function, you can share `*.proto` files with other languag
   </Tabs.Tab>
   <Tabs.Tab>
     <RemoteSource 
-      url="https://raw.githubusercontent.com/samchon/typia/refs/heads/master/examples/bin/protobuf.message.js"
+      url="https://raw.githubusercontent.com/samchon/typia/refs/heads/master/examples/bin/protobuf/message.js"
       filename="examples/bin/protobuf.message.js"
       showLineNumbers />
   </Tabs.Tab>
@@ -94,7 +94,7 @@ Second, to support [Prisma](../utilization/prisma). If a comment is created in t
 
 </Alert>
 
-<Tabs items={["TypeScript Source Code", "Protobuf Schema", "Compiled JavaScript File"]}>
+<Tabs items={["TypeScript Source Code", "Compiled JavaScript File"]}>
   <Tabs.Tab>
     <RemoteSource 
       url="https://raw.githubusercontent.com/samchon/typia/refs/heads/master/examples/src/protobuf/message-comment-tag.ts"
